<resources>
    <string name="app_name">SolsticeChallenge</string>
    <string name="contacts">Contacts</string>
    <string name="favorite_contacts">Favorite Contacts</string>
    <string name="other_contacts">other contacts</string>
    <string name="phone">Phone</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="mobile">Mobile</string>
    <string name="adress">Adress</string>
    <string name="birthdate">Birthdate</string>
    <string name="email">Email</string>
</resources>
