<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.mms.solsticechallenge.views.detail_activity.DetailActivityViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/back_button"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_chevron_left_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/back_button"
                android:gravity="center"
                android:text="@string/contacts"
                android:textColor="@color/detail_header"
                android:textSize="@dimen/toolbar_title_size" />

            <FrameLayout
                android:id="@+id/favorite_mark_on_detail_header"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{v -> viewmodel.changeFavoriteStatus()}">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animation_favourite"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    app:lottie_rawRes="@raw/favourite" />

                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/grey_star"
                    android:src="@drawable/ic_star_border_grey_24dp"
                    android:layout_width="24dp"
                    android:layout_height="24dp" />

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/colorPrimaryDark" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/user_pic_on_detail_screen"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:profilePicURL="@{viewmodel.profilePicURL}"/>

                <TextView
                    android:id="@+id/contact_name_on_detail_screen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@{viewmodel.name}"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/title_text_size_detail_screen" />

                <TextView
                    android:id="@+id/company_name_on_detail_screen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewmodel.company}"
                    android:textAlignment="center" />


                <RelativeLayout
                    android:id="@+id/home_phone"
                    android:layout_width="match_parent"
                    android:layout_height="100dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/phone"
                        android:textAllCaps="true" />

                    <TextView
                        android:id="@+id/home_phone_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:textColor="@color/colorAccent"
                        android:textSize="18dp"
                        android:text="@{viewmodel.homePhone}"
                        android:textAllCaps="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="60dp"
                        android:text="@string/home" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/mobile_phone"
                    android:layout_width="match_parent"
                    android:layout_height="100dp">

                    <View
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"/>

                    <TextView
                        android:layout_marginTop="30dp"
                        android:text="@string/phone"
                        android:textAllCaps="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/mobile_phone_text"
                        android:layout_marginTop="60dp"
                        android:text="@{viewmodel.mobilePhone}"
                        android:textColor="@color/colorAccent"
                        android:textSize="18dp"
                        android:textAllCaps="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="60dp"
                        android:text="@string/mobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/work_phone"
                    android:layout_width="match_parent"
                    android:layout_height="100dp">

                    <View
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"/>

                    <TextView
                        android:layout_marginTop="30dp"
                        android:text="@string/phone"
                        android:textAllCaps="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/eork_phone_text"
                        android:layout_marginTop="60dp"
                        android:text="@{viewmodel.workPhone}"
                        android:textColor="@color/colorAccent"
                        android:textSize="18dp"
                        android:textAllCaps="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="60dp"
                        android:text="@string/work"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="120dp">

                    <View
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"/>

                    <TextView
                        android:layout_marginTop="30dp"
                        android:text="@string/adress"
                        android:textAllCaps="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_marginTop="60dp"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@{viewmodel.address}"
                            android:textColor="@color/colorAccent"
                            android:textSize="18dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/birthdate"
                    android:layout_width="match_parent"
                    android:layout_height="120dp">

                    <View
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"/>

                    <TextView
                        android:layout_marginTop="30dp"
                        android:text="@string/birthdate"
                        android:textAllCaps="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_marginTop="60dp"
                        android:text="@{viewmodel.birthdate}"
                        android:textColor="@color/colorAccent"
                        android:textSize="18dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="120dp">

                    <View
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"/>

                    <TextView
                        android:layout_marginTop="30dp"
                        android:text="@string/email"
                        android:textAllCaps="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_marginTop="60dp"
                        android:text="@{viewmodel.email}"
                        android:textColor="@color/colorAccent"
                        android:textSize="18dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>